# python_fatapi_ddd

./: .gitignore  README.md  persons.db  pyproject.toml  requirements.txt
app/: main.py
app/adapters/db/: models.py
app/adapters/repositories/: github_repository.py  in_memory_person_repository.py  sqlalchemy_person_repository.py  sqlalchemy_user_repository.py
app/adapters/schemas/: auth_schema.py  git_schema.py  person_schema.py
app/api/: auth_router.py  deps.py  git_router.py  person_router.py
app/domain/: git_repo.py  person.py  user.py
app/domain/repository/: git_repository.py  person_repository.py  user_repository.py
app/services/: auth.py
app/usecases/: create_person.py  delete_person.py  get_person.py  list_git_repos.py  list_persons.py  update_person.py
tests/: conftest.py  test_auth.py  test_person_api.py
